--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Press Start 2P', cursive;
 }
 body {
     display: flex;
@@ -18,11 +19,24 @@ header {
     width: 500px;
     height: 40px;
     padding: 16px;
+    font-size: 12px;
 }
 #frame {
     width: 500px;
     height: 200px;
     border: 2px solid black;
+}
+.gamestart-frame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.gameover-frame {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #character {
@@ -56,6 +70,14 @@ header {
 }
 .start2{
     animation: frameofref2 3.5s infinite alternate ease;
+}
+
+#gamebutton {
+    border: transparent;
+    background-color: seagreen;
+    padding: 23px 45px;
+    border-radius: 4px;
+    color: whitesmoke;
 }
 
 @keyframes frameofref {
