Added some hover and transition, changed the colors of the button, text and background, added message to rotate mobile to play in landscape mode

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: 'Press Start 2P', cursive;
 }
 body {
+    background-color: #E2EDDD;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,11 +21,18 @@ header {
     height: 40px;
     padding: 16px;
     font-size: 12px;
+    color: #2E3B51;
+}
+#mobile {
+    display: none;
 }
 #frame {
     width: 500px;
     height: 200px;
-    border: 2px solid black;
+    border: 2px solid #2E3B51;
+}
+#gameover {
+    color: #2E3B51;
 }
 .gamestart-frame {
     display: flex;
@@ -74,12 +82,20 @@ header {
 
 #gamebutton {
     border: transparent;
-    background-color: seagreen;
+    background-color: #92CF93;
     padding: 23px 45px;
     border-radius: 4px;
-    color: whitesmoke;
+    color: #2E3B51;
+    font-size: 13px;
+    transition: 0.5s;
 }
+#gamebutton:hover {
+    cursor: pointer;
+    background-color: #2E3B51;
+    color: #92CF93;
+    box-shadow: 2px ;
 
+}
 @keyframes frameofref {
     0%{left: 480px;}
     100%{left: 0px;}
@@ -94,4 +110,17 @@ header {
     30%{top: 100px;}
     70%{top: 100px;}
     100%{top: 130px;}
+}
+
+@media (max-width: 600px) {
+    header {
+        display: none;
+    }
+    #frame {
+        display: none;
+    }
+    #mobile {
+        display: block;
+        text-align: center;
+    }
 }
